fix css overflow

--- a/includes/admin/css/wll-admin.css
+++ b/includes/admin/css/wll-admin.css
@@ -42,7 +42,8 @@
 .wll-header {
   box-shadow: 0 5px 15px rgba(0,0,0,.08);
   width: 100%;
-  padding: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   background-color: #fff;
   /*position: fixed;*/
   z-index: 10;
